--- a/index11.css
+++ b/index11.css
@@ -5,15 +5,40 @@
 		ul,li{
 			list-style: none;
 		}
+		.top{
+			height: 20px;
+			width: 2000px;
+			background-color: #ccc;
+			margin-top: 120px;
+			padding-left: 150px;
+		}
+		.top>img{
+			height: 20px;
+		}
+		.top>div{
+			display: inline-block;
+			color: red;
+			height: 20px;
+			width: 1000px;
+			border: 1px solid none;
+			font-size: 12px;
+			overflow: hidden;
+		}
+		#top1{
+			margin-left: 1000px;
+			margin-right: 200px;
+			width: 400px;
+		}
 		.box{
 			height: 397px;
 			width: 1200px;
-			border: 1px solid red;
-			margin: 100px auto;
+			border: 1px solid white;
+			margin: 10px auto;
 			position: relative;
 			overflow: hidden;
 		}
 		.slider{
+			height: 397px;
 			width: 8400px;
 			position: absolute;
 			left: -1200px;
@@ -56,9 +81,11 @@
 			cursor: pointer;
 			margin: 0 10px;
 			border-radius: 50%;
+			text-align: center;
 		}
 		.nav .active{
 			background: red;
+			color: white;
 		}
 		div{
 			display: block;
