--- a/index11.css
+++ b/index11.css
@@ -7,10 +7,11 @@
 		}
 		.top{
 			height: 20px;
-			width:1400px;
+			width:1500px;
 			background-color: #ccc;
 			margin-top: 120px;
 			padding-left: 150px;
+			border-color:red;
 		}
 		.top>img{
 			height: 20px;
